--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -132,7 +132,7 @@
   "share": "Share",
   "createButton": "Create",
   "newSpaceNotice": {
-    "mainText": "Your space has been set up with the default voting strategy. This means you can create proposals and let your organization vote on them right away. You can also set up your own strategies (f.e. for token voting) in the settings.",
+    "mainText": "By default each voter has a voting power of one. You can change how voting power is calculated via strategies in your {settings}. Changes to your settings will only affect new proposals, existing proposals can not be changed.",
     "learnMore": "Learn more in the {documentation} or join Snapshot {discord} for help.",
     "gotIt": "Got it!"
   },
