Add message block and show if loading for longer than 8 seconds

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -308,7 +308,8 @@
     "seeOnEns": "See on ENS",
     "goToSettings": "Go to settings",
     "setSpaceProfile": "Customize your space",
-    "waitForTransaction": "The transaction need to confirm before you can create your space. {txUrl}"
+    "waitForTransaction": "The transaction need to confirm before you can create your space. {txUrl}",
+    "pleaseWaitMessage": "This can take a few minutes, please wait while the transaction is being confirmed"
   },
   "notify": {
     "youDidIt": "You did it!",
