--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -181,7 +181,7 @@
     "now": "Now",
     "votingPeriodExplainer": "This is the time period in which users will be able to vote. The proposal will be visible and pending before the start of the voting period.",
     "uploadImageExplainer": "Attach files by dragging & dropping, selecting or pasting them.",
-    "uploading": "Uploading",
+    "uploading": "Uploading..",
     "markdown": "Styling with Markdown is supported",
     "validationWarning": {
       "basic": {
