--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -180,7 +180,7 @@
     "continue": "Continue",
     "now": "Now",
     "votingPeriodExplainer": "This is the time period in which users will be able to vote. The proposal will be visible and pending before the start of the voting period.",
-    "uploadImageExplainer": "Select and upload an image",
+    "uploadImageExplainer": "Upload an image by selecting or copying and pasting.",
     "uploading": "Uploading image",
     "markdown": "Styling with Markdown is supported",
     "validationWarning": {
