Create profile routes and base view

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -318,6 +318,14 @@
     "waitForTransaction": "The transaction need to confirm before you can create your space. {txUrl}",
     "pleaseWaitMessage": "This can take a few minutes, please wait while the transaction is being confirmed"
   },
+  "profile": {
+    "about": {
+      "header": "About"
+    },
+    "activity": {
+      "header": "Activity"
+    }
+  },
   "notify": {
     "youDidIt": "You did it!",
     "copied": "Copied!",
