Add spaces list

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -320,7 +320,8 @@
   },
   "profile": {
     "about": {
-      "header": "About"
+      "header": "About",
+      "joinedSpaces": "Joined spaces"
     },
     "activity": {
       "header": "Activity"
