--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -322,7 +322,8 @@
   "profile": {
     "about": {
       "header": "About",
-      "joinedSpaces": "Joined spaces"
+      "joinedSpaces": "Joined spaces",
+      "biography": "Bio"
     },
     "activity": {
       "header": "Activity"
