Add features to profile form modal

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -328,6 +328,9 @@
     },
     "activity": {
       "header": "Activity"
+    },
+    "settings": {
+      "header": "Profile settings"
     }
   },
   "notify": {
