Add view profile button and add to account modal

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -133,6 +133,7 @@
   "share": "Share",
   "createButton": "Create",
   "discussion": "Discussion",
+  "changeWallet": "Change wallet",
   "newSpaceNotice": {
     "header": "Your space is live!",
     "mainText": "By default each voter has a voting power of one. You can change how voting power is calculated via strategies in your {settings}. Changes to your settings will only affect new proposals, existing proposals can not be changed.",
