--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -327,7 +327,8 @@
       "biography": "Bio"
     },
     "activity": {
-      "header": "Activity"
+      "header": "Activity",
+      "votedFor": "Voted {choice}"
     },
     "settings": {
       "header": "Profile settings"
