Fix profile edit modal

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -331,7 +331,11 @@
       "votedFor": "Voted {choice}"
     },
     "settings": {
-      "header": "Profile settings"
+      "header": "Edit profile",
+      "name": "Name",
+      "biography": "Bio",
+      "namePlaceholder": "Enter name",
+      "bioPlaceholder": "Tell your story"
     }
   },
   "notify": {
