Show message no joined spaces

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -327,7 +327,8 @@
     "about": {
       "header": "About",
       "joinedSpaces": "Joined spaces",
-      "biography": "Bio"
+      "biography": "Bio",
+      "notJoinSpacesYet": "Hasn't joined any spaces yet"
     },
     "activity": {
       "header": "Activity",
