Add Assets block

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -538,6 +538,8 @@
     "switchToMainnet": "Switch to Mainnet"
   },
   "treasury": {
-    "title": "Treasury"
+    "title": "Treasury",
+    "assets": "Assets",
+    "24hChange": "24h change"
   }
 }
