--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -58,8 +58,7 @@
   "confirmRemove": "Are you sure you want to remove your delegation to",
   "removeSpace": "for the space {0}",
   "confirmVote": "Confirm vote",
-  "sureToVote": "Are you sure you want to cast this vote?",
-  "cannotBeUndone": "This action cannot be undone.",
+  "previewVote": "Preview your vote",
   "options": "Option(s)",
   "votingPower": "Your voting power",
   "receipt": "Receipt",
