Enforce controller when safe and add message

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -304,7 +304,9 @@
     "registerEnsButton": "Register",
     "supportedEnsTLDs": "Supported domain endings",
     "helpDocsAndDiscordLinks": "Not sure how to create a space? Learn more in the {docs} or join Snapshot {discord}.",
-    "setSpaceController": "Set space controller address on ENS",
+    "setSpaceController": "Space controller",
+    "setSpaceControllerInfo": " The space controller is the account that will be able to manage the space settings.",
+    "setSpaceControllerInfoGnosisSafe": "When using Gnosis Safe, the space controller has to be the safe address.",
     "editSpaceController": "Edit controller on ENS",
     "setController": "Set controller",
     "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your ENS domain.",
