--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -303,9 +303,7 @@
     "registerEnsButton": "Enregistrer",
     "supportedEnsTLDs": "Extensions de domaine prises en charge",
     "helpDocsAndDiscordLinks": "Not sure how to create a space? Learn more in the {docs} or join Snapshot {discord}.",
-    "setSpaceController": "Space controller",
-    "setSpaceControllerInfo": " The space controller is the account that will be able to manage the space settings.",
-    "setSpaceControllerInfoGnosisSafe": "When creating a space with a Gnosis Safe it's recommended to set the safe address as the space controller. If you don't, you need to follow some additional steps. {link}",
+    "setSpaceController": "Définir l'adresse du controller de l'espace sur ENS",
     "editSpaceController": "Modifier le controller sur ENS",
     "setController": "Définir le controller",
     "explainControllerAndEns": "Cette action nécessite une transaction sur Ethereum Mainnet qui ajoutera un enregistrement TEXT «snapshot» à votre domaine ENS.",
@@ -313,16 +311,14 @@
     "controllerHasAuthority": "Le controller a toute autorité sur les paramètres de l’espace",
     "controller": "Controller",
     "selectEnsForSpace": "Choisir l’adresse ENS",
-    "spaceOwnerAddressPlaceHolder": "e.g. {address}",
+    "spaceOwnerAddressPlaceHolder": "par ex. 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "L’adresse du controller",
     "updateController": "Mettre à jour le controller",
     "seeOnEns": "Voir sur ENS",
     "goToSettings": "Accéder les paramètres",
     "setSpaceProfile": "Personnaliser votre espace",
     "waitForTransaction": "La transaction doit être confirmée avant de pouvoir créer votre espace. {txUrl}",
-    "pleaseWaitMessage": "Cela peut prendre quelques minutes, veuillez attendre pendant que la transaction est confirmée",
-    "notControllerAddress": "Please connect with the controller address {wallet} to create the space.",
-    "fillCurrentAccount": "Use current account"
+    "pleaseWaitMessage": "Cela peut prendre quelques minutes, veuillez attendre pendant que la transaction est confirmée"
   },
   "profile": {
     "buttonEdit": "Modifier le profil",
