--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -303,9 +303,7 @@
     "registerEnsButton": "登録する",
     "supportedEnsTLDs": "サポートされているドメインの拡張子",
     "helpDocsAndDiscordLinks": "Not sure how to create a space? Learn more in the {docs} or join Snapshot {discord}.",
-    "setSpaceController": "Space controller",
-    "setSpaceControllerInfo": " The space controller is the account that will be able to manage the space settings.",
-    "setSpaceControllerInfoGnosisSafe": "When creating a space with a Gnosis Safe it's recommended to set the safe address as the space controller. If you don't, you need to follow some additional steps. {link}",
+    "setSpaceController": "ENSでスペースコントローラのアドレスを設定する",
     "editSpaceController": "ENSのコントローラを編集する",
     "setController": "コントローラを設定する",
     "explainControllerAndEns": "このアクションには、イーサリアムのメインネット上での取引が必要です。これにより、ENSドメインに「スナップショット」TEXTレコードが追加されます。",
@@ -313,16 +311,14 @@
     "controllerHasAuthority": "コントローラはスペースの設定に対して完全な権限を持っています",
     "controller": "コントローラ",
     "selectEnsForSpace": "ENSアドレスを選ぶ",
-    "spaceOwnerAddressPlaceHolder": "e.g. {address}",
+    "spaceOwnerAddressPlaceHolder": "例: 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "コントローラのアドレス",
     "updateController": "コントローラをアップデートする",
     "seeOnEns": "ENS上で見る",
     "goToSettings": "設定に移動する",
     "setSpaceProfile": "スペースをカスタマイズする",
     "waitForTransaction": "スペースを作成する前に取引の確定が必要です。{txUrl}",
-    "pleaseWaitMessage": "取引が確定されるまで少々お待ちください",
-    "notControllerAddress": "Please connect with the controller address {wallet} to create the space.",
-    "fillCurrentAccount": "Use current account"
+    "pleaseWaitMessage": "取引が確定されるまで少々お待ちください"
   },
   "profile": {
     "buttonEdit": "Edit profile",
