--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -303,9 +303,7 @@
     "registerEnsButton": "Зарегистрироваться",
     "supportedEnsTLDs": "Поддерживаемые доменные окончания",
     "helpDocsAndDiscordLinks": "Not sure how to create a space? Learn more in the {docs} or join Snapshot {discord}.",
-    "setSpaceController": "Space controller",
-    "setSpaceControllerInfo": " The space controller is the account that will be able to manage the space settings.",
-    "setSpaceControllerInfoGnosisSafe": "When creating a space with a Gnosis Safe it's recommended to set the safe address as the space controller. If you don't, you need to follow some additional steps. {link}",
+    "setSpaceController": "Установите адрес контроллера сообщества на ENS",
     "editSpaceController": "Изменить контроллер на ENS",
     "setController": "Настроить виджеты",
     "explainControllerAndEns": "Это действие требует транзакции в сети Ethereum Mainnet, которая добавит запись TEXT \"snapshot\" к вашему домену ENS.",
@@ -313,16 +311,14 @@
     "controllerHasAuthority": "Контроллер имеет полное право управлять настройками сообщества",
     "controller": "Контроллер",
     "selectEnsForSpace": "Выберите ENS-адрес",
-    "spaceOwnerAddressPlaceHolder": "e.g. {address}",
+    "spaceOwnerAddressPlaceHolder": "например, 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "Адрес контроллера",
     "updateController": "Обновить контроллер",
     "seeOnEns": "Смотреть на ENS",
     "goToSettings": "Перейти в настройки",
     "setSpaceProfile": "Настроить свое сообщество",
     "waitForTransaction": "Подтвердите транзакцию, чтобы создать свое сообщество.{txUrl}",
-    "pleaseWaitMessage": "Это может занять несколько минут, пожалуйста, подождите, подтверждения трансакции",
-    "notControllerAddress": "Please connect with the controller address {wallet} to create the space.",
-    "fillCurrentAccount": "Use current account"
+    "pleaseWaitMessage": "Это может занять несколько минут, пожалуйста, подождите, подтверждения трансакции"
   },
   "profile": {
     "buttonEdit": "Edit profile",
