--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -332,7 +332,7 @@
     },
     "about": {
       "label": "About",
-      "placeholder": "Tell us about your space"
+      "placeholder": "What is your organisation about?"
     },
     "categories": {
       "label": "Categorie(s)",
