--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -263,7 +263,7 @@
     "domain": {
       "label": "Domain name",
       "placeholder": "e.g. vote.balancer.fi",
-      "info": "To setup a custom domain you need to aditionally open a pull request on github. {docs}"
+      "info": "To setup a custom domain you aditionally need to open a pull request on github. {docs}"
     },
     "avatar": "Avatar",
     "header": "Settings",
