--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -248,6 +248,16 @@
     "unread": "Unread"
   },
   "settings": {
+    "header": "Settings",
+    "editController": "Edit controller",
+    "connectWithSpaceOwner": "To modify space settings, connect with a controller or admin wallet.",
+    "currentSpaceControllerIs": "The current space controller is {address}",
+    "newController": "New controller",
+    "set": "Set",
+    "network": "Network",
+
+    "profile": "Profile",
+    "avatar": "Avatar",
     "name": {
       "label": "Name",
       "placeholder": "e.g. Yam Network"
@@ -260,51 +270,48 @@
       "label": "Categorie(s)",
       "select": "Select categorie(s)"
     },
+    "terms": "Terms",
+    "hideSpace": "Hide space from homepage",
+
+    "links": "Links",
+    "website": "Website",
+
+    "strategies": "Strategie(s)",
+    "symbol": "Symbol",
+    "addStrategy": "Add strategy",
+
+    "admins": "Admins",
+    "authors": "Authors",
+
+    "proposalValidation": "Proposal validation",
+    "validation": "Validation",
+    "proposalThreshold": "Proposal threshold",
+    "allowOnlyAuthors": "Allow only authors to submit a proposal",
+    "editValidation": "Edit validation",
+    "selectValidation": "Select validation",
+    "validationParameters": "Validation parameters",
+
+    "voting": "Voting",
+    "votingDelay": "Voting delay",
+    "votingPeriod": "Voting period",
+    "hours": "Hours",
+    "days": "Days",
+    "quorum": "Quorum",
+    "type": "Type",
+    "anyType": "Any",
+    "hideAbstain": "Ignore abstain votes in basic voting results",
+
+    "customDomain": "Custom domain",
     "domain": {
       "label": "Domain name",
       "placeholder": "e.g. vote.balancer.fi",
       "info": "To setup a custom domain you aditionally need to open a pull request on github. {docs}"
     },
-    "avatar": "Avatar",
-    "header": "Settings",
-    "setEnsTextRecord": "Set ENS text record",
-    "editController": "Edit controller",
-    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an ENS text record pointing to that file.",
-    "profile": "Profile",
-    "terms": "Terms",
-    "network": "Network",
-    "symbol": "Symbol",
     "skin": "Skin",
-    "customDomain": "Custom domain",
-    "strategies": "Strategie(s)",
-    "selectCategories": "Select categories",
-    "hideSpace": "Hide space from homepage",
-    "addStrategy": "Add strategy",
-    "authors": "Authors",
-    "admins": "Admins",
-    "defaultTab": "Default tab",
-    "proposalThreshold": "Proposal threshold",
-    "allowOnlyAuthors": "Allow only authors to submit a proposal",
-    "editPlugin": "Edit plugin",
+
     "addPlugin": "Add plugin",
-    "pluginParameters": "Plugin parameters",
-    "proposalValidation": "Proposal validation",
-    "validation": "Validation",
-    "editValidation": "Edit validation",
-    "selectValidation": "Select validation",
-    "validationParameters": "Validation parameters",
-    "warningTextRecord": "You must set a text record on the ENS domain.",
-    "votingDelay": "Voting delay",
-    "votingPeriod": "Voting period",
-    "voting": "Voting",
-    "quorum": "Quorum",
-    "type": "Type",
-    "anyType": "Any",
-    "hideAbstain": "Ignore abstain votes in basic voting results",
-    "connectWithSpaceOwner": "To modify space settings, connect with a controller or admin wallet.",
-    "currentSpaceControllerIs": "The current space controller is {address}",
-    "newController": "New controller",
-    "set": "Set"
+    "editPlugin": "Edit plugin",
+    "pluginParameters": "Plugin parameters"
   },
   "setup": {
     "example": "e.g. yam.eth",
@@ -335,14 +342,9 @@
     "waitForTransaction": "The transaction need to confirm before you can create your space. {txUrl}",
     "pleaseWaitMessage": "This can take a few minutes, please wait while the transaction is being confirmed",
     "notControllerAddress": "Please connect with the controller address {wallet} to create the space.",
-    "fillCurrentAccount": "Use currently logged in account",
-    "profile": "Profile"
+    "fillCurrentAccount": "Use currently logged in account"
   },
-  "spaceStrategies": {
-    "title": "Strategie(s)",
-    "symbol": "Symbol",
-    "addStrategy": "Add strategy"
-  },
+
   "profile": {
     "buttonEdit": "Edit profile",
     "viewProfile": "View profile",
