--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -472,6 +472,7 @@
     "title": "Select voting privacy",
     "information": "The type of privacy used on proposals, setting it here will enforce the same privacy on all proposals.",
     "any": "Any",
+    "none": "None",
     "shutter": {
       "label": "Shutter",
       "description": "Choices are encrypted and only visible once the voting period is over"
