Add shutter message

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -4,8 +4,10 @@
   "createSpace": "Create space",
   "backToHome": "Home",
   "actions": "Actions",
+  "poweredBy": "Powered by",
   "results": "Results",
   "resultsError": "Results could not be calculated. This is often due to a misconfigured strategy or an unresponsive RPC node involved in the strategy.",
+  "resultsShutter": "This proposal has shutter privacy enabled. All votes will be encrypted until the voting period has ended and the final score is calculated.",
   "vpError": "Your voting power could not be calculated. This is often due to a misconfigured strategy or an unresponsive RPC node involved in the strategy.",
   "getHelp": "Get help",
   "retry": "Retry",
