Fix button and add defaults

--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -616,5 +616,12 @@
       "empty": "There are no assets in this contract"
     },
     "24hChange": "24h change"
+  },
+  "footer": {
+    "newsletter": {
+      "yourEmail": "Your email",
+      "title": "Get the latest Snapshot updates"
+    },
+    "joinCommunity": "Join Snapshot community"
   }
 }
