--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -607,6 +607,6 @@
   },
   "header": {
     "title": "Where descisions get made",
-    "description": "Snapshot is the free and open-source home of your community's governance. Create your own space now, and start making decisions with your community."
+    "description": "Snapshot is the free and open-source home of your community's governance. Create your own space now and start making decisions."
   }
 }
