--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -135,6 +135,7 @@
   "discussion": "Discussion",
   "changeWallet": "Change wallet",
   "createASpace": "Create a space",
+  "getStarted": "Get started",
   "skip": "Skip",
   "newSpaceNotice": {
     "header": "Your space is live!",
@@ -375,7 +376,13 @@
     "waitForTransaction": "The transaction need to confirm before you can create your space. {txUrl}",
     "pleaseWaitMessage": "This can take a few minutes, please wait while the transaction is being confirmed",
     "notControllerAddress": "Please connect with the controller address {wallet} to create the space.",
-    "fillCurrentAccount": "Use currently logged in account"
+    "fillCurrentAccount": "Use currently logged in account",
+    "domain": {
+      "title": "Setup your space domain",
+      "ensMessage": " One thing you need before you can create your own space, is an ENS domain on Ethreum mainnet.",
+      "ensMessageTestnet": "You can also {link} on the Rinkeby testnet and mess with things there first.",
+      "tryDemo": "try the demo"
+    }
   },
   "profile": {
     "buttonEdit": "Edit profile",
@@ -610,6 +617,6 @@
   },
   "header": {
     "title": "Where descisions get made",
-    "description": "Snapshot is the free and open-source home of your community's governance. Create your own space now and start making decisions."
+    "description": "Snapshot is a free and open-source home for your community's governance. Create your own space now and start making decisions."
   }
 }
