--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -379,9 +379,24 @@
     "fillCurrentAccount": "Use currently logged in account",
     "domain": {
       "title": "Setup your space domain",
-      "ensMessage": " One thing you need before you can create your own space, is an ENS domain on Ethreum mainnet.",
+      "ensMessage": " One thing you need before you can create your own space, is an ENS domain on Ethereum mainnet.",
       "ensMessageTestnet": "You can also {link} on the Rinkeby testnet and mess with things there first.",
       "tryDemo": "try the demo"
+    },
+    "strategy": {
+      "title": "How would you like to setup your voting strategy?",
+      "onePersonOneVote": {
+        "title": "One person, one vote",
+        "description": "Manage a whitelist of people who can vote or simply allow any address to vote. Every vote is equal and no token is required"
+      },
+      "tokenVoting": {
+        "title": "Token weighted voting",
+        "description": "Votes are weighted by a token. The token can be an ERC-20, ERC-721 or ERC-1155 token standard"
+      },
+      "advanced": {
+        "title": "Advanced settings",
+        "description": "Select up to 8 strategies with a wide range of options. If you can't find the right strategy for your use case, you can create your own"
+      }
     }
   },
   "profile": {
