--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -638,6 +638,6 @@
   "aboutPage": {
     "description": "Make democratic decisions that affect your web3 community. Snapshots is a free, open source and inclusive platform for managing your community.",
     "subHeader": "Web3 governance should be a snap",
-    "subDescription": "Creating proposals and voting on Snapshot is user-friendly and does not cost gas as the process is securely performed off-chain"
+    "subDescription": "Creating proposals and voting on Snapshot is user-friendly and instant, this is made possible by off-chain signing technology."
   }
 }
