--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -633,7 +633,7 @@
   },
   "header": {
     "title": "Where decisions get made",
-    "description": "Snapshot is a free and open-source home for your community's governance. Create your own space now and start making decisions"
+    "description": "Snapshot is a free, open-source platform for community governance. Create your own space now and start making decisions!"
   },
   "aboutPage": {
     "description": "Snapshot is a decentralized voting platform that allows users to easily create and vote on proposals. The process is gasless and off-chain, making it user-friendly and affordable. The system is also flexible, supporting various voting types and strategies.",
